update ci/cd config

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 # Official language image. Look for the different tagged releases at:
 # https://hub.docker.com/r/library/python/tags/
-image: python:latest
+image: python:3.6
 
 variables:
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
@@ -11,26 +11,25 @@ cache:
     - venv/
 
 before_script:
-  - python -V  # Print out python version for debugging
-  - pip install virtualenv
-  - virtualenv venv
-  - source venv/bin/activate
+  - python -V # Print out python version for debugging
+  - pip install pipx
+  - pipx install poetry
+  - pipx install tox
+  - source $(poetry env info --path)/bin/activate
+  - poetry install
 
 test:
   script:
-    - python setup.py test
-    - pip install tox flake8  # you can also use tox
+    - source $(poetry env info --path)/bin/activate
+    - poetry run pytest
     - tox -e py36,flake8
 
 run:
   script:
-    - python setup.py bdist_wheel
-    # an alternative approach is to install and run:
-    - pip install dist/*
-    # run the command here
-  artifacts:
-    paths:
-      - dist/*.whl
+    - poetry build
+  # artifacts:
+  #   paths:
+  #     - dist/*.whl
 
 pages:
   script:
