--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ cache:
 before_script:
   - python -V # Print out python version for debugging
   - pip install pipx
+  - pipx ensurepath
   - pipx install poetry
   - pipx install tox
   - source $(poetry env info --path)/bin/activate
