--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pyarrow = "^2.0.0"
 snowflake-connector-python = "2.0.4"
 pyarrow = "^2.0.0"
 pytest = "^6.1.2"
+inflection = "^0.5.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
