--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pendulum = "1.2.0"
 pytz = "2018.4"
 python-dateutil = "<2.8.1,>=2.1"
 pyarrow = "^2.0.0"
+click = "^7.1.2"
 
 [tool.poetry.dev-dependencies]
 snowflake-connector-python = "2.0.4"
@@ -22,3 +23,8 @@ pytest = "^6.1.2"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+plugin-base = 'tap_base.plugin_base:PluginBase.cli'
+tap-base = 'tap_base.tap_base:cli'
+sample-tap-parquet = 'tap_base.tests.sample_tap_parquet.tap:cli'
