--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,4 +27,4 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.scripts]
 plugin-base = 'tap_base.plugin_base:PluginBase.cli'
 tap-base = 'tap_base.tap_base:cli'
-sample-tap-parquet = 'tap_base.tests.sample_tap_parquet.tap:cli'
+sample-tap-parquet = 'tap_base.tests.sample_tap_parquet.parquet_tap:cli'
