--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ pytest = "^6.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+build-backend = "poetry.core.masonry.rest"
 
 [tool.poetry.scripts]
 plugin-base = 'tap_base.plugin_base:PluginBase.cli'
