--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pytz = "2018.4"
 python-dateutil = "<2.8.1,>=2.1"
 pyarrow = "^2.0.0"
 click = "^7.1.2"
+Jinja2 = "^2.11.2"
 
 [tool.poetry.dev-dependencies]
 snowflake-connector-python = "2.0.4"
