--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,8 @@ before_script:
 test:
   script:
     - source $(poetry env info --path)/bin/activate
-    - poetry run pytest
+    - poetry run pytest -k 'not snowflake'
+    - poetry run pytest -k 'snowflake'
     # - tox -e py36,flake8
 
     # run:
