addl. cli simplification

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,4 @@ build-backend = "poetry.core.masonry.rest"
 plugin-base = 'tap_base.plugin_base:PluginBase.cli'
 tap-base = 'tap_base.tap_base:cli'
 sample-tap-parquet = 'tap_base.tests.sample_tap_parquet.parquet_tap:cli'
+sample-tap-countries = 'tap_base.tests.sample_tap_countries.countries_tap:cli'
