--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ python-dateutil = "<2.8.1,>=2.1"
 pyarrow = "^2.0.0"
 click = "^7.1.2"
 Jinja2 = "^2.11.2"
-jwt = "0.6.1"
+PyJWT = "1.7.1"
 
 [tool.poetry.dev-dependencies]
 snowflake-connector-python = "2.0.4"
@@ -29,5 +29,7 @@ build-backend = "poetry.core.masonry.rest"
 [tool.poetry.scripts]
 plugin-base = 'tap_base.plugin_base:PluginBase.cli'
 tap-base = 'tap_base.tap_base:cli'
-tap-parquet = 'tap_base.tests.sample_tap_parquet.parquet_tap:cli'
-tap-countries = 'tap_base.tests.sample_tap_countries.countries_tap:cli'
+tap-countries = 'tap_base.samples.sample_tap_countries.countries_tap:cli'
+tap-google-analytics = 'tap_base.samples.sample_tap_google_analytics.ga_tap:cli'
+tap-parquet = 'tap_base.samples.sample_tap_parquet.parquet_tap:cli'
+tap-snowflake = 'tap_base.samples.sample_tap_snowflake.snowflake_tap:cli'
