--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,10 @@
 # Official language image. Look for the different tagged releases at:
 # https://hub.docker.com/r/library/python/tags/
+.parallel:python_version:
+  parallel:
+    matrix:
+      - PYTHON_VERSION: ["3.6", "3.7", "3.8"]
+
 image: python:$PYTHON_VERSION
 
 variables:
