--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "tap-base"
 version = "0.0.1"
 description = "An open framework for building singer-compliant taps"
-authors = ["Aaron Steers <aaronsteers@gmail.com>"]
+authors = ["Meltano Team and Contributors"]
 license = "Apache v2"
 
 [tool.poetry.dependencies]
