refactoring and pytest fixes

--- a/tap_base/samples/sample_tap_gitlab/gitlab-config.sample.json
+++ b/tap_base/samples/sample_tap_gitlab/gitlab-config.sample.json
@@ -1,7 +1,7 @@
 {
     "auth_token": "dummy_key",
     "project_ids": [
-        "meltano/tap-base",
+        "meltano/singer-sdk",
         "meltano/meltano",
     ]
 }
