--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,13 @@
 # Official language image. Look for the different tagged releases at:
 # https://hub.docker.com/r/library/python/tags/
-.parallel:python_version:
-  parallel:
-    matrix:
-      - PYTHON_VERSION: ["3.6", "3.7", "3.8"]
+#
+# Matrix syntax not correct:
+# .parallel:python_version:
+#   parallel:
+#     matrix:
+#       - PYTHON_VERSION: ["3.6", "3.7", "3.8"]
 
-image: python:$PYTHON_VERSION
+image: python:3.6
 
 variables:
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
