--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "tap-base"
+name = "singer-sdk"
 version = "0.0.1"
 description = "An open framework for building singer-compliant taps"
 authors = ["Meltano Team and Contributors"]
@@ -28,6 +28,5 @@ build-backend = "poetry.core.masonry.rest"
 
 [tool.poetry.scripts]
 plugin-base = 'singer_sdk.plugin_base:PluginBase.cli'
-tap-base = 'singer_sdk.singer_sdk:cli'
 # Sample CLI declaration:
 # tap-countries = 'singer_sdk.samples.sample_tap_countries.countries_tap:cli'
