--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ deploy:
       then
         poetry version --short
       else
-        poetry version $(poetry version --short)-dev.$GITHUB_RUN_NUMBER
+        poetry version $(poetry version --short)-dev.$CI_JOB_ID
         poetry version --short
       fi
       echo -e "\nPublishing to version ref '$(poetry version --short)'...\n\n"
