add config templates, hint in missing file error

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Ignore secrets folders used in testing (except readme and templates)
 
-.secrets
+.secrets/*.*
 !.secrets/README.md
 !.secrets/*.template
 
