--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,10 @@ pyarrow = "^2.0.0"
 click = "^7.1.2"
 Jinja2 = "^2.11.2"
 PyJWT = "1.7.1"
+requests = "^2.25.1"
 
 [tool.poetry.dev-dependencies]
-snowflake-connector-python = "2.0.4"
+# snowflake-connector-python = "2.0.4" # Removed: Too many version conflicts!
 pyarrow = "^2.0.0"
 pytest = "^6.1.2"
 
