--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ click = "^7.1.2"
 Jinja2 = "^2.11.2"
 PyJWT = "1.7.1"
 requests = "^2.25.1"
+cryptography = "^3.4.6"
 
 [tool.poetry.dev-dependencies]
 # snowflake-connector-python = "2.0.4" # Removed: Too many version conflicts!
