--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ pytest = "^6.1.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.rest"
+build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 plugin-base = 'singer_sdk.plugin_base:PluginBase.cli'
