--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ cryptography = "^3.4.6"
 pyarrow = "^2.0.0"
 pytest = "^6.1.2"
 black = {version = "^20.8b1", allow-prereleases = true}
+mypy = "^0.812"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
