add flake8 linter

--- a/tox.ini
+++ b/tox.ini
@@ -7,3 +7,9 @@ whitelist_externals = poetry
 commands =
     poetry install -v
     poetry run pytest
+
+[flake8]
+; ignore = E226,E302,E41
+max-line-length = 88
+exclude = cookiecutter
+max-complexity = 10
