--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,8 +32,10 @@ test_and_deploy:
       echo "Run python tests..."
       poetry run pytest
     - |
-      echo "Run pything linter..."
-      poetry run mypy singer_sdk || echo "Ignoring failures..."
+      echo "Run python linters..."
+      poetry run black --check singer_sdk/
+      poetry run flake8 singer_sdk
+      poetry run mypy singer_sdk || echo "MyPy found issues (ignoring)..."
     - |
       echo "Publishing to PyPi..."
       if [[ "$BRANCH_NAME" == *main ]]
