ignore W503 in flake8

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ commands =
 
 [flake8]
 ; ignore = E226,E302,E41
-ignore = D105
+ignore = W503
 max-line-length = 88
 exclude = cookiecutter
 max-complexity = 10
