--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pyarrow = "^2.0.0"
 pytest = "^6.1.2"
 black = {version = "^20.8b1", allow-prereleases = true}
 mypy = "^0.812"
+cookiecutter = "^1.7.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
