--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pytest = "^6.1.2"
 black = {version = "^20.8b1", allow-prereleases = true}
 mypy = "^0.812"
 cookiecutter = "^1.7.2"
+PyYAML = "^5.4.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
