Add pydocstyle linting in CI pipeline.

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,10 @@ commands =
 
 [flake8]
 ; ignore = E226,E302,E41
+ignore = W503
 max-line-length = 88
 exclude = cookiecutter
 max-complexity = 10
+
+[pydocstyle]
+ignore = D105,D203,D213
