--- a/singer_sdk/tests/external/.secrets/gitlab-config.json.template
+++ b/singer_sdk/tests/external/.secrets/gitlab-config.json.template
@@ -4,5 +4,8 @@
         "myorg/my-project-a",
         "myorg/my-project-b"
     ],
+    "group_ids": [
+        "12345"
+    ]
     "start_date": "2020-02-20"
 }
