--- a/cookiecutter/tap-template/{{cookiecutter.library_name}}/pyproject.toml
+++ b/cookiecutter/tap-template/{{cookiecutter.library_name}}/pyproject.toml
@@ -1,17 +1,14 @@
 [tool.poetry]
 name = "{{cookiecutter.tap_id}}"
 version = "0.0.1"
-description = "`{{cookiecutter.tap_id}}` is Singer-compliant {{cookiecutter.source_name}} tap built with Singer SDK."
+description = "`{{cookiecutter.tap_id}}` is Singer tap for {{cookiecutter.source_name}}, built with the Singer SDK."
 authors = ["TODO: Your Name <your.email@sample.com>"]
 license = "Apache v2"
 
 [tool.poetry.dependencies]
 python = "^3.6"
 requests = "^2.25.1"
-# Note: Until we clear the first non-prerelease, `singer-sdk` need to be pinned to a specific version.
-#       For a list of released versions: https://pypi.org/project/singer-sdk/#history
-#       To safely update the version number: `poetry add singer-sdk==0.0.2-dev.1068770959`
-singer-sdk = "0.0.2-dev.1068770959"
+singer-sdk = "^0.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.2"
