--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,10 +60,10 @@ publish_to_pypi:
   image: python:${PYTHON_VERSION}
   script:
     - |
-      echo "Publishing to PyPi..."
+      echo "Publishing to PyPi, Ref='$CI_COMMIT_REF_NAME' and Namespace='$CI_PROJECT_NAMESPACE'..."
       if [[ "$CI_PROJECT_NAMESPACE" == "meltano" ]]
       then
-        if [[ "$BRANCH_NAME" == *main ]]
+        if [[ "$CI_COMMIT_REF_NAME" == *main ]]
         then
           poetry version --short
         else
