--- a/cookiecutter/tap-template/{{cookiecutter.library_name}}/meltano.yml
+++ b/cookiecutter/tap-template/{{cookiecutter.library_name}}/meltano.yml
@@ -5,6 +5,8 @@ plugins:
   extractors:
   - name: {{cookiecutter.tap_id}}
     namespace: {{cookiecutter.library_name}}
+    # TODO: To test using Meltano, replace with absolute path
+    #       to the {{cookiecutter.tap_id}}.sh script:
     executable: ./{{cookiecutter.tap_id}}.sh
   loaders:
   - name: target-jsonl
