--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,13 @@ license = "Apache 2.0"
 python = "<3.9,>=3.6"
 pipelinewise-singer-python = "1.2.0"
 backoff = "1.8.0"
-pendulum = "1.2.0"
+pendulum = "^1.2.0"
 click = "^7.1.2"
 PyJWT = "1.7.1"
 requests = "^2.25.1"
 cryptography = "^3.4.6"
 importlib-metadata = {version = "*", markers = "python_version < \"3.8\""}
+memoization = "^0.3.2"
 
 [tool.poetry.dev-dependencies]
 # snowflake-connector-python = "2.0.4" # Removed: Too many version conflicts!
