--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,8 +53,12 @@ lint:
     - poetry run mypy singer_sdk || echo "MyPy found issues (ignoring)..."
 
 publish_to_pypi:
+  release:
+    name: '$CI_COMMIT_TAG'
+    tag_name: '$CI_COMMIT_TAG'
+    description: '$CI_COMMIT_TAG'
   only:
-    - main@meltano/singer-sdk
+    - tags
   stage: publish
   parallel:
     matrix:
@@ -62,14 +66,18 @@ publish_to_pypi:
   image: python:${PYTHON_VERSION}
   script:
     - |
-      echo "Publishing to PyPi, Ref='$CI_COMMIT_REF_NAME' and Namespace='$CI_PROJECT_NAMESPACE'..."
-      poetry version --short
-      echo -e "\nPublishing to version ref '$(poetry version --short)'...\n\n"
-      poetry publish --build
+      echo "Publishing tag '$CI_COMMIT_TAG' to PyPi, Ref='$CI_COMMIT_REF_NAME' and Namespace='$CI_PROJECT_NAMESPACE'..."
+      echo "Detected poetry version: v$(poetry version --short)"
+      if [[ "$CI_COMMIT_TAG" == "v$(poetry version --short)" ]]; then
+        echo -e "\nPublishing to version ref 'v$(poetry version --short)'...\n\n"
+        poetry publish --build
+      elif
+        echo -e "\nERROR - Tag '$CI_COMMIT_TAG' did not match detected version 'v$(poetry version --short)'."
+        exit 1
+      end
 
-publish_to_pypi_prerelease:
-  only:
-    - tags
+publish_pypi_prerelease:
+  when: manual
   stage: publish
   parallel:
     matrix:
