--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,7 @@ lint:
     - poetry run pydocstyle singer_sdk
     - poetry run mypy singer_sdk || echo "MyPy found issues (ignoring)..."
 
-publish_to_pypi:
+pypi_publish:
   release:
     name: '$CI_COMMIT_TAG'
     tag_name: '$CI_COMMIT_TAG'
@@ -76,7 +76,7 @@ publish_to_pypi:
         exit 1
       end
 
-publish_pypi_prerelease:
+pypi_prerelease:
   when: manual
   stage: publish
   parallel:
