--- a/cookiecutter/tap-template/{{cookiecutter.library_name}}/meltano.yml
+++ b/cookiecutter/tap-template/{{cookiecutter.library_name}}/meltano.yml
@@ -12,15 +12,15 @@ plugins:
     - state
     - catalog
     - discover
+    config:
+      start_date: '2010-01-01T00:00:00Z'
     settings:
-    # TODO: Optionally specify settings and default value here:
+    # TODO: To configure using Meltano, declare settings and their types here:
     - name: username
-      value: me@here.com
     - name: password
       kind: password
-      # Set using the env var {{ cookiecutter.library_name.upper() }}_PASSWORD
     - name: start_date
-      value: '2015-09-21T04:00:00Z'
+      value: '2010-01-01T00:00:00Z'
   loaders:
   - name: target-jsonl
     variant: andyh1203
