--- a/cookiecutter/tap-template/{{cookiecutter.library_name}}/meltano.yml
+++ b/cookiecutter/tap-template/{{cookiecutter.library_name}}/meltano.yml
@@ -8,6 +8,19 @@ plugins:
     # TODO: To test using Meltano, replace with absolute path
     #       to the {{cookiecutter.tap_id}}.sh script:
     executable: ./{{cookiecutter.tap_id}}.sh
+    capabilities:
+    - state
+    - catalog
+    - discover
+    config:
+      start_date: '2010-01-01T00:00:00Z'
+    settings:
+    # TODO: To configure using Meltano, declare settings and their types here:
+    - name: username
+    - name: password
+      kind: password
+    - name: start_date
+      value: '2010-01-01T00:00:00Z'
   loaders:
   - name: target-jsonl
     variant: andyh1203
