--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Meltano Team and Contributors"]
 license = "Apache 2.0"
 
 [tool.poetry.dependencies]
-python = "<3.9,>=3.6"
+python = "<3.9,>=3.6.1"
 pipelinewise-singer-python = "1.2.0"
 backoff = "1.8.0"
 pendulum = "^1.2.0"
@@ -16,6 +16,8 @@ requests = "^2.25.1"
 cryptography = "^3.4.6"
 importlib-metadata = {version = "*", markers = "python_version < \"3.8\""}
 memoization = "^0.3.2"
+joblib = "^1.0.1"
+inflection = "^0.5.1"
 
 [tool.poetry.dev-dependencies]
 # snowflake-connector-python = "2.0.4" # Removed: Too many version conflicts!
@@ -26,6 +28,8 @@ cookiecutter = "^1.7.2"
 PyYAML = "^5.4.1"
 pydocstyle = "^5.1.1"
 flake8 = "^3.9.0"
+pyarrow = "^3.0.0"
+pandas = ">1,<=1.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
