--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ requests = "^2.25.1"
 cryptography = "^3.4.6"
 importlib-metadata = {version = "*", markers = "python_version < \"3.8\""}
 memoization = "^0.3.2"
+typer = "^0.3.2"
 
 [tool.poetry.dev-dependencies]
 # snowflake-connector-python = "2.0.4" # Removed: Too many version conflicts!
