--- a/cookiecutter/tap-template/cookiecutter.tests.yml
+++ b/cookiecutter/tap-template/cookiecutter.tests.yml
@@ -1,4 +1,9 @@
 tests:
+  - source_name: RESTCustomTemplateTest
+    tap_id: test-tap-rest-custom-type
+    stream_type: REST
+    auth_method: Custom or N/A
+
   - source_name: RESTSimpleAuthTemplateTest
     tap_id: test-tap-rest-simpleauth-type
     stream_type: REST
@@ -10,14 +15,9 @@ tests:
     auth_method: OAuth
 
   - source_name: RESTJWTTemplateTest
-    tap_id: test-tap-rest-simpleauth-type
+    tap_id: test-tap-rest-jwt-type
     stream_type: REST
     auth_method: JWT
-
-  - source_name: RESTJWTTemplateTest
-    tap_id: test-tap-rest-simpleauth-type
-    stream_type: REST
-    auth_method: Custom or N/A
 
   - source_name: GraphQLJWTTemplateTest
     tap_id: test-tap-graphql-jwt-type
