fix gitignore refs

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Ignore secrets folders used in testing (except readme and templates)
 
-.secrets/*
-!.secrets/README.md
-!.secrets/*.template
+**/.secrets/*
+!**/.secrets/README.md
+!**/.secrets/*.template
 
 # Ignore local output:
 
