update tox def, fix tests

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,22 @@
 [tox]
+envlist = py38
+; envlist = py36, py38, py39
 isolated_build = true
-envlist = py36, py38, py39
 
 [testenv]
 whitelist_externals = poetry
+
+; deps =
+;     poetry
+
 commands =
     poetry install -v
     poetry run pytest
+    poetry run black --check singer_sdk/
+    poetry run flake8 singer_sdk
+    poetry run pydocstyle singer_sdk
+    poetry run mypy singer_sdk --exclude='singer_sdk/(tests|samples)'
+
 
 [flake8]
 ; ignore = E226,E302,E41
