--- a/mypy.ini
+++ b/mypy.ini
@@ -3,7 +3,6 @@ python_version = 3.8
 warn_unused_configs = True
 warn_return_any = True
 exclude = singer_sdk/tests
-# Temporarily disabled:
 
 [mypy-singer.*]
 # Library 'pipelinewise-singer-tools' does not have type hints:
@@ -20,4 +19,7 @@ ignore_missing_imports = True
 
 [mypy-backoff.*]
 # Frozen due to pipelinewise-singer-tools dependency
+ignore_missing_imports = True
+
+[mypy-bcrypt.*]
 ignore_missing_imports = True
