MyPy test compliance, add nox scripts

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ lint:
     - poetry run black --check singer_sdk/
     - poetry run flake8 singer_sdk
     - poetry run pydocstyle singer_sdk
-    - poetry run mypy singer_sdk || echo "MyPy found issues (ignoring)..."
+    - poetry run mypy singer_sdk --exclude='singer_sdk/(tests)'
 
 pypi_publish:
   release:
