--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ commands =
     poetry run black --check singer_sdk/
     poetry run flake8 singer_sdk
     poetry run pydocstyle singer_sdk
-    poetry run mypy singer_sdk --exclude='singer_sdk/(tests|samples)'
+    poetry run mypy singer_sdk --exclude='singer_sdk/(tests)'
 
 
 [flake8]
