log_sort_error() handler

--- a/tox.ini
+++ b/tox.ini
@@ -11,11 +11,12 @@ whitelist_externals = poetry
 
 commands =
     poetry install -v
-    poetry run pytest
+    poetry run black singer_sdk/
     poetry run black --check singer_sdk/
     poetry run flake8 singer_sdk
     poetry run pydocstyle singer_sdk
     poetry run mypy singer_sdk --exclude='singer_sdk/(tests|samples)'
+    poetry run pytest
 
 
 [flake8]
