--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ PyYAML = "^5.4.1"
 pydocstyle = "^5.1.1"
 flake8 = "^3.9.0"
 tox = "^3.23.1"
+codecov = "^2.1.11"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
