try codecov in gitlab and tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,5 @@
 [tox]
+passenv = TOXENV CI GITLAB_* CODECOV_*
 envlist = py38
 ; envlist = py36, py38, py39
 isolated_build = true
@@ -11,6 +12,7 @@ whitelist_externals = poetry
 
 commands =
     poetry install -v
+    poetry run codecov -e TOXENV
     poetry run pytest
     poetry run black --check singer_sdk/
     poetry run flake8 singer_sdk
