--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,8 +32,8 @@ build_and_test:
     - |
       if [[ "$CI_PROJECT_NAMESPACE" == "meltano" ]]
       then
-        echo "Run full python test suite..."
-        poetry run pytest
+        echo "Run full test suite..."
+        poetry run tox
       else
         echo "Run 'core' and 'cookiecutter' python test suites..."
         poetry run pytest singer_sdk/tests/core
