add coverage config

--- a/tox.ini
+++ b/tox.ini
@@ -29,3 +29,17 @@ max-complexity = 10
 
 [pydocstyle]
 ignore = D105,D203,D213
+
+[coverage:run]
+source = singer_sdk
+omit =
+    singer_sdk/tests/*
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+    def __repr__
+    raise AssertionError
+    raise NotImplementedError
+    if __name__ == .__main__.:
+    class .*\bProtocol\):
