add env vars, remove version spec

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
-passenv = TOXENV CI GITLAB_* CODECOV_*
-envlist = py38
+passenv = TOXENV CI GITLAB_* CODECOV_* TAP_* TARGET_*
+; envlist = py38
 ; envlist = py36, py38, py39
-isolated_build = true
+; isolated_build = true
 
 [testenv]
 whitelist_externals = poetry
