update tox config

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,12 @@
 [tox]
 passenv = TOXENV CI GITLAB_* CODECOV_* TAP_* TARGET_*
-; envlist = py38
+envlist = python3
 ; envlist = py36, py38, py39
-; isolated_build = true
+isolated_build = true
+
+[build-system]
+requires = ["poetry_core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
 
 [testenv]
 whitelist_externals = poetry
@@ -12,8 +16,8 @@ whitelist_externals = poetry
 
 commands =
     poetry install -v
+    poetry run coverage run -m pytest
     poetry run codecov -e TOXENV
-    poetry run pytest
     poetry run black --check singer_sdk/
     poetry run flake8 singer_sdk
     poetry run pydocstyle singer_sdk
