add sample env prefix

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-passenv = TOXENV CI GITLAB_* CODECOV_* TAP_* TARGET_*
+passenv = TOXENV CI GITLAB_* CODECOV_* TAP_* TARGET_* SAMPLE_*
 envlist = python3
 ; envlist = py36, py38, py39
 isolated_build = true
