try passenv dupe

--- a/tox.ini
+++ b/tox.ini
@@ -9,11 +9,8 @@ requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [testenv]
+passenv = TOXENV CI GITLAB_* CODECOV_* TAP_* TARGET_* SAMPLE_*
 whitelist_externals = poetry
-
-; deps =
-;     poetry
-
 commands =
     poetry install -v
     poetry run coverage run -m pytest
