--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,6 @@
 [tox]
 passenv = TOXENV CI GITLAB_* CODECOV_* TAP_* TARGET_* SAMPLE_*
-envlist = py
-; envlist = py36, py38, py39
+envlist = py36, p37, py38
 isolated_build = true
 
 [build-system]
@@ -14,6 +13,11 @@ whitelist_externals = poetry
 commands =
     poetry install -v
     poetry run coverage run -m pytest
+
+[testenv:py38]
+passenv = TOXENV CI GITLAB_* CODECOV_* TAP_* TARGET_* SAMPLE_*
+whitelist_externals = poetry
+commands =
     poetry run codecov -e TOXENV
     poetry run black --check singer_sdk/
     poetry run flake8 singer_sdk
