--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
+envlist = py, lint  # By default, use current python for pytest and linting
 passenv = TOXENV CI GITLAB_* CODECOV_* TAP_* TARGET_* SAMPLE_*
-envlist = py36, p37, py38
+skipsdist=True
 isolated_build = true
 
 [build-system]
@@ -11,19 +12,19 @@ build-backend = "poetry.core.masonry.api"
 passenv = TOXENV CI GITLAB_* CODECOV_* TAP_* TARGET_* SAMPLE_*
 whitelist_externals = poetry
 commands =
-    poetry install -v
+    poetry install --no-root
     poetry run coverage run -m pytest
+    poetry run codecov -e TOXENV
 
-[testenv:py38]
+[testenv:lint]
 passenv = TOXENV CI GITLAB_* CODECOV_* TAP_* TARGET_* SAMPLE_*
 whitelist_externals = poetry
 commands =
-    poetry run codecov -e TOXENV
+    poetry install --no-root
     poetry run black --check singer_sdk/
     poetry run flake8 singer_sdk
     poetry run pydocstyle singer_sdk
     poetry run mypy singer_sdk --exclude='singer_sdk/(tests|samples)'
-
 
 [flake8]
 ; ignore = E226,E302,E41
