move install to commands_pre

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py, lint  # By default, use current python for pytest and linting
+envlist = test, lint  # By default, use current python for pytest and linting
 passenv = TOXENV CI GITLAB_* CODECOV_* TAP_* TARGET_* SAMPLE_*
 skipsdist=True
 isolated_build = true
@@ -11,16 +11,17 @@ build-backend = "poetry.core.masonry.api"
 [testenv]
 passenv = TOXENV CI GITLAB_* CODECOV_* TAP_* TARGET_* SAMPLE_*
 whitelist_externals = poetry
-commands =
+commands_pre =
     poetry install --no-root
+commands =
     poetry run coverage run -m pytest
     poetry run codecov -e TOXENV
 
+[testenv:test]
+# Use default py interpreter
+
 [testenv:lint]
-passenv = TOXENV CI GITLAB_* CODECOV_* TAP_* TARGET_* SAMPLE_*
-whitelist_externals = poetry
 commands =
-    poetry install --no-root
     poetry run black --check singer_sdk/
     poetry run flake8 singer_sdk
     poetry run pydocstyle singer_sdk
