--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,8 +30,8 @@ build_and_test:
     - |
       if [[ "$CI_PROJECT_NAMESPACE" == "meltano" ]]
       then
-        echo "Run full test suite using '${PYTHON_VERSION//./}' tox env config..."
-        poetry run tox -e ${PYTHON_VERSION//./}
+        echo "Run full test suite using 'py${PYTHON_VERSION//./}' tox env config..."
+        poetry run tox -e py
       else
         echo "Run 'core' and 'cookiecutter' python test suites..."
         poetry run pytest singer_sdk/tests/core
