--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,6 @@ stages:
 
 default:
   before_script:
-    - apt-get install python3-dev
     - python -V
     - python -m pip install pipx
     - python -m pipx ensurepath
@@ -25,7 +24,7 @@ build_and_test:
   stage: test
   parallel:
     matrix:
-      - PYTHON_VERSION: ["3.6", "3.7", "3.8", "3.9"]
+      - PYTHON_VERSION: ["3.6", "3.7", "3.8"]
   image: python:${PYTHON_VERSION}
   script:
     - |
