--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,7 @@ commands_pre =
     poetry install --no-root
 commands =
     poetry run coverage run -m pytest
+    poetry run coverage report --show-missing
     poetry run codecov -e TOXENV
 
 [testenv:test]
